miniconf/tests/ui/empty-array.stderr
error[E0080]: evaluation panicked: Must have at least one child
 --> src/impls/internal.rs
  |
  |     const SCHEMA: &'static Schema = &Schema::homogeneous(Homogeneous::new(N, T::SCHEMA));
  |                                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `miniconf::impls::internal::<impl miniconf::TreeSchema for [usize; 0]>::SCHEMA` failed inside this call
  |
note: inside `miniconf::Homogeneous::new`
 --> src/schema.rs
  |
  |             len: NonZero::new(len).expect("Must have at least one child"),
  |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here

note: erroneous constant encountered
 --> src/impls/internal.rs
  |
  |     const SCHEMA: &'static Schema = &Schema::homogeneous(Homogeneous::new(N, T::SCHEMA));
  |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> tests/ui/empty-array.rs:4:22
  |
4 |     const _: usize = <[usize; 0] as TreeSchema>::SCHEMA.shape().max_depth;
  |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
